[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/BaseGameWorld/BaseGameWorld.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/BaseGameUI/ActionsUI/ActionsUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/BaseGameUI/BaseGameUI.gd" type="Script" id=3]
[ext_resource path="res://TResources/TributeItemIcons/FishIcon.tres" type="Texture" id=4]
[ext_resource path="res://Assets/Sourced/UI/UI assets pack 2/UI cooking.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 82, 51, 45, 42 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="BaseGameWorld" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="ActionsUI" parent="." instance=ExtResource( 2 )]
visible = false

[node name="MarginContainer" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -186.0
margin_top = -177.0
rect_min_size = Vector2( 120, 120 )

[node name="InventoryBackground" type="TextureRect" parent="MarginContainer"]
margin_left = 70.0
margin_top = 67.0
margin_right = 115.0
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/InventoryBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerItem" type="TextureRect" parent="MarginContainer/InventoryBackground/CenterContainer"]
visible = false
margin_left = 11.0
margin_top = 14.0
margin_right = 34.0
margin_bottom = 27.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )

[connection signal="action_selected" from="ActionsUI" to="." method="_on_ActionsUI_action_selected"]
